--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "botkit-studio-metrics": "^0.0.2",
     "cookie-parser": "^1.4.3",
     "debug": "^2.3.3",
+    "dotenv": "^5.0.1",
     "express": "^4.14.0",
     "express-hbs": "^1.0.4",
     "github-api": "^3.0.0",
-    "node-env-file": "^0.1.8",
     "querystring": "^0.2.0",
     "request": "^2.79.0",
     "request-promise-native": "^1.0.5",
