--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.15.2",
     "botkit": "^0.6.12",
     "botkit-storage-mongo": "^1.0.6",
+    "botkit-storage-datastore": "git://github.com/tonymet/botkit-storage-datastore.git#feature/smaller-dependencies",
     "botkit-studio-metrics": "^0.0.2",
     "cookie-parser": "^1.4.3",
     "debug": "^2.3.3",
