--- a/cloudbuild/Dockerfile
+++ b/cloudbuild/Dockerfile
@@ -1,3 +1,3 @@
-from alpine
+FROM alpine
 WORKDIR /workspace
-CMD sh -c "cat app.yaml app-env.yaml > /workspace/app-complete.yaml"
+ENTRYPOINT ["sh", "-c"]
